==> aequitasetveritas/recolector-msp430g2955/diskio.c <==
#include "diskio.h"
#include <msp430.h>
#include <stdint.h>
#include "uart.h"
#include "xprintf.h"
#define CS_LOW()	P3OUT &= ~BIT0			/* CS=low */
#define	CS_HIGH()	P3OUT |= BIT0;			/* CS=high */
#define MMC_CD		1                       /* Card detected.   yes:true, no:false, default:true */
#define MMC_WP		0       		/* Write protected. yes:true, no:false, default:false */
#define	FCLK_SLOW()	SPCR = 0x52		/* Set slow clock (F_CPU / 64) */
#define	FCLK_FAST()	SPCR = 0x50		/* Set fast clock (F_CPU / 2) */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */

static
void power_on (void) {
    /*Inicializacion SPI*/
    P3SEL |= BIT1 | BIT2 | BIT3;
    P3SEL2 &= ~(BIT1 | BIT2 | BIT3);
    UCB0CTL1 |= UCSWRST; /* USCI-B specific SPI setup */
    UCB0CTL0 = UCCKPH | UCMSB | UCMST | UCMODE_0 | UCSYNC; // SPI mode 0, master
    UCB0BR0 = 0x28; // 400kHz
    UCB0BR1 = 0x00;
    UCB0CTL1 = UCSSEL_2; // Clock = SMCLK, clear UCSWRST and enables USCI_B module.
    P3DIR |= BIT0; // P3.0 output direction
}

static
void power_off (void)
{
    /*Por ahora solamente sostengo el reset del modulo*/
    UCB0CTL1 |= UCSWRST;
}

BYTE xchg_spi (		/* Returns received data */
	BYTE dat		/* Data to be sent */
) {
    BYTE dummy;
    while ((IFG2 & UCB0TXIFG) == 0); // wait while not ready / for RX
    UCB0TXBUF = dat; // write
    while ((IFG2 & UCB0RXIFG) == 0); // wait for RX buffer (full)
    dummy = UCB0RXBUF;
    return (dummy);
}

static
void xmit_spi_multi (
	const BYTE *p,	/* Data block to be sent */
	UINT cnt		/* Size of data block (must be multiple of 2) */
) {
    BYTE dummy;
    uint16_t i=0;
    xputs("\n\r");
    do {
        while ((IFG2 & UCB0TXIFG) == 0); // wait while not ready / for RX
        UCB0TXBUF = p[i++]; // write
        cnt -= 1;
        dummy=UCB0RXBUF;
    } while (cnt);
    xputs("\n\r");
    
    while ((IFG2 & UCB0RXIFG) == 0); // wait for RX buffer (full)
    dummy = UCB0RXBUF;

}

static
void rcvr_spi_multi (
	BYTE *p,	/* Data buffer */
	UINT cnt	/* Size of data block (must be multiple of 2) */
) {
    BYTE dummy;
    uint16_t i=0;
    xputs("\n\r");
    do {   
        while ((IFG2 & UCB0TXIFG) == 0); // wait while not ready / for RX
        UCB0TXBUF = 0xFF;                 // write
        while ((IFG2 & UCB0RXIFG) == 0); // wait for RX buffer (full)
        p[i++] = UCB0RXBUF;
        //xprintf("%02x",UCB0RXBUF);
    } while (cnt -= 1);
    //xputs("\n\r");
}

void disk_timerproc (void)
{
	BYTE n, s;


	n = Timer1;				/* 100Hz decrement timer */
	if (n) Timer1 = --n;
	n = Timer2;
	if (n) Timer2 = --n;

	s = Stat;

	if (MMC_WP)				/* Write protected */
		s |= STA_PROTECT;
	else					/* Write enabled */
		s &= ~STA_PROTECT;

	if (MMC_CD)				/* Card inserted */
		s &= ~STA_NODISK;
	else					/* Socket empty */
		s |= (STA_NODISK | STA_NOINIT);

	Stat = s;				/* Update MMC status */
}
